--- a/package.json
+++ b/package.json
@@ -5,17 +5,40 @@
   "version": "0.1.0",
   "author": "Kyle Mathews <mathews.kyle@gmail.com>",
   "dependencies": {
+    "@emotion/react": "^11.10.6",
+    "@emotion/styled": "^11.10.6",
+    "@react-icons/all-files": "^4.1.0",
+    "@types/react-modal": "^3.13.1",
     "gatsby": "^5.7.0",
+    "gatsby-plugin-canonical-urls": "^5.7.0",
+    "gatsby-plugin-emotion": "^8.7.0",
     "gatsby-plugin-image": "^3.7.0",
     "gatsby-plugin-manifest": "^5.7.0",
+    "gatsby-plugin-modal-routing": "^1.2.0",
+    "gatsby-plugin-react-helmet": "^6.7.0",
     "gatsby-plugin-sharp": "^5.7.0",
+    "gatsby-plugin-typescript": "^5.7.0",
+    "gatsby-remark-copy-linked-files": "^6.7.0",
+    "gatsby-remark-external-links": "^0.0.4",
+    "gatsby-remark-images": "^7.7.0",
+    "gatsby-remark-prismjs": "^7.7.0",
+    "gatsby-remark-smartypants": "^6.7.0",
     "gatsby-source-filesystem": "^5.7.0",
+    "gatsby-transformer-remark": "^6.7.0",
     "gatsby-transformer-sharp": "^5.7.0",
+    "prismjs": "^1.29.0",
+    "query-string": "^8.1.0",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "react-helmet": "^6.1.0",
+    "react-icomoon": "^2.5.7",
+    "react-icons": "^4.8.0",
+    "swiper": "6.8.4"
   },
   "devDependencies": {
-    "prettier": "^2.8.4"
+    "gh-pages": "^5.0.0",
+    "prettier": "^2.8.4",
+    "typescript": "^4.9.5"
   },
   "keywords": [
     "gatsby"
@@ -28,7 +51,8 @@
     "start": "gatsby develop",
     "serve": "gatsby serve",
     "clean": "gatsby clean",
-    "test": "echo \"Write tests! -> https://gatsby.dev/unit-testing\" && exit 1"
+    "test": "echo \"Write tests! -> https://gatsby.dev/unit-testing\" && exit 1",
+    "deploy": "gatsby build && gh-pages -d public -b master"
   },
   "repository": {
     "type": "git",
