--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "@react-icons/all-files": "^4.1.0",
     "@types/react-modal": "^3.13.1",
     "gatsby": "^5.7.0",
+    "gatsby-background-image": "^1.6.0",
     "gatsby-plugin-canonical-urls": "^5.7.0",
     "gatsby-plugin-emotion": "^8.7.0",
     "gatsby-plugin-image": "^3.7.0",
@@ -36,6 +37,7 @@
     "swiper": "6.8.4"
   },
   "devDependencies": {
+    "gatsby-plugin-favicons": "^2.0.0",
     "gh-pages": "^5.0.0",
     "prettier": "^2.8.4",
     "typescript": "^4.9.5"
